--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - uses: actions/checkout@v4
+      - run: echo "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}"
       - uses: google-github-actions/auth@v3
         with:
           credentials_json: '${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}'
