--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,11 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - uses: actions/checkout@v4
-      - run: echo "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}"
-      - uses: google-github-actions/auth@v3
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v1'
         with:
-          credentials_json: '${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}'
+          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
       - run: gcloud info 
 
       - name: Build and push Docker image
