--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           - folder: loadgenerator
           - folder: paymentservice
           - folder: productcatalogservice
-          - folder: shoppingservice
+          - folder: shippingservice
           - folder: recommendationservice
           - folder: shoppingassistantservice 
     steps:
