--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,10 @@
-oname: CI Pipeline
+name: CI Pipeline
 
 on:
   push:
     branches:
       - main
 
-  env:
-    PROJECT_ID= devops-project-466116
-    GAR_LOCATION= us-east5-docker.pkg.dev/devops-project-466116/registry
-    REGION = us-east-5
 jobs:
   
   build:
@@ -50,7 +46,7 @@ jobs:
           file: ./src/${{ matrix.folder }}/Dockerfile
           push: true
           tags: |
-            ${{ GAR_LOCATION }}/ ${{ matrix.folder }}:${{ github.ref_name }}-${{ github.sha }}
+            ${{ variables.GAR_LOCATION }}/ ${{ matrix.folder }}:${{ github.ref_name }}-${{ github.sha }}
 
       - name: Build and push Docker image for Cartservice
         id: build-image
@@ -60,7 +56,7 @@ jobs:
           file: ./src/cartservice/src/Dockerfile
           push: true
           tags: |
-            cartservice/${{ secrets.ECR_REPOSITORY }}:${{ github.ref_name }}-${{ github.sha }}
+            ${{ variables.GAR_LOCATION }}/ cartservice:${{ github.ref_name }}-${{ github.sha }}
 
       - name: Static Code Analysis
         uses: SonarSource/sonarcloud-github-action@master
@@ -117,4 +113,3 @@ jobs:
     steps:
       - name: Send failure notification
         run: echo "Build, update, or deployment verification failed. Notification sent."
-
