--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,11 +42,11 @@ jobs:
         id: build-cart
         uses: docker/build-push-action@v2
         with:
-          context: ./src/${{ matrix.folder }}/
+          context: .
           file: ./src/${{ matrix.folder }}/Dockerfile
           push: true
           tags: |
-            ${{ env.GAR_LOCATION }}:${{ github.ref_name }}-${{ github.sha }}
+            ${{ env.GAR_LOCATION }}/${{ matrix.folder }}:${{ github.ref_name }}-${{ github.sha }}
 
 
 
