--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
           file: ./src/${{ matrix.folder }}/Dockerfile
           push: true
           tags: |
-            ${{ env.GAR_LOCATION }}/${{ matrix.folder }}:${{ github.ref_name }}-${{ github.sha }}
+            ${{ matrix.folder }}:${{ github.ref_name }}-${{ github.sha }}
 
 
 
