--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         id: build-cart
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: ./src/${{ matrix.folder }}/
           file: ./src/${{ matrix.folder }}/Dockerfile
           push: true
           tags: |
