--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,8 @@ jobs:
           GHUB_REF: ${{ github.ref_name }}
           GHUB_SHA: ${{ github.sha }}
         run: |
-          docker build -t us-east5-docker.pkg.dev/devops-project-466116/registry:$GHUB_REF-$GHUB_SHA ./src/$SERVICE
-          docker push us-east5-docker.pkg.dev/devops-project-466116/registry:$GHUB_REF-$GHUB_SHA
+          docker build -t us-east5-docker.pkg.dev/devops-project-466116/registry/$SERVICE:$GHUB_REF-$GHUB_SHA ./src/$SERVICE
+          docker push us-east5-docker.pkg.dev/devops-project-466116/registry/$SERVICE:$GHUB_REF-$GHUB_SHA
 
 
 
@@ -55,12 +55,16 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
+          SERVICE: ${{ matrix.folder }}
+          GHUB_REF: ${{ github.ref_name }}
+          GHUB_SHA: ${{ github.sha }}
         with:
           projectBaseDir: .
 
       - name: Scan Docker image with Docker Scout
         run: |
-          docker scout cves ${{ env.GAR_LOCATION }}/ ${{ matrix.folder }}:${{ github.ref_name }}-${{ github.sha }}
+          docker scout cves us-east5-docker.pkg.dev/devops-project-466116/registry/$SERVICE:$GHUB_REF-$GHUB_SHA
 
   update_helm_chart:
     runs-on: ubuntu-latest
