--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Update Helm chart with new image tag
         run: |
-          sed -i 's/tag:.*/tag: ${{ github.ref_name }}-${{ github.sha }}/' helm-chart/values-${{ github.ref_name }}.yaml
+          sed -i 's/tag:.*/tag: ${{ github.ref_name }}-${{ github.sha }}/' helm-chart/values.yaml
 
       - name: Commit and push changes
         run: |
