--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,7 @@ jobs:
   verify_deployment_dev:
     runs-on: ubuntu-latest
     needs: update_helm_chart
-    if: github.ref == 'refs/heads/dev'
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Set up kubectl
         uses: azure/setup-kubectl@v1
